Fixed print layout, pre-wrap for whitespace.

--- a/WebAPI_Pure/App/css/printStyle.css
+++ b/WebAPI_Pure/App/css/printStyle.css
@@ -77,7 +77,7 @@ span {
 
 .message,p {
     display: block;
-    white-space: pre-line;
+    white-space: pre-wrap;
     margin: 0;
     padding: 0;
 }
